Fix alignment on homepage and visibility of background image.

--- a/src/app/blocks/main/main.component.scss
+++ b/src/app/blocks/main/main.component.scss
@@ -18,6 +18,6 @@ section {
   @include extra-small {
     top: 60px;
     left: 0;
-    padding-top: 30px;
+    padding-top: 0;
   }
 }
